[gd_scene load_steps=105 format=2]

[ext_resource path="res://Script/Menu/OngletScreen.gd" type="Script" id=1]
[ext_resource path="res://Font/Forgotten.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Image/Animation/menu/Animation Bouton Gauche/Bouton gauche_016.png" type="Texture" id=3]
[ext_resource path="res://Image/Animation/menu/Animation Bouton Gauche/Bouton gauche_004.png" type="Texture" id=4]
[ext_resource path="res://Image/Animation/menu/Particule Bouton Jouer/Particule Bouton_019.png" type="Texture" id=5]
[ext_resource path="res://Image/Animation/menu/Animation Bouton Droit/Bouton Droit_009.png" type="Texture" id=6]
[ext_resource path="res://Image/Animation/menu/Particule Bouton Jouer/Particule Bouton_017.png" type="Texture" id=7]
[ext_resource path="res://Image/Animation/menu/Particule Bouton Jouer/Particule Bouton_020.png" type="Texture" id=8]
[ext_resource path="res://Image/Animation/menu/Particule Bouton Jouer/Particule Bouton_016.png" type="Texture" id=9]
[ext_resource path="res://Image/Animation/menu/Animation Bouton Droit/Bouton Droit_008.png" type="Texture" id=10]
[ext_resource path="res://Image/Animation/menu/Animation Bouton Gauche/Bouton gauche_007.png" type="Texture" id=11]
[ext_resource path="res://Image/Animation/menu/Animation Bouton Droit/Bouton Droit_013.png" type="Texture" id=12]
[ext_resource path="res://Image/Animation/menu/Animation Bouton Droit/Bouton Droit_000.png" type="Texture" id=13]
[ext_resource path="res://Image/Animation/menu/Animation Bouton Gauche/Bouton gauche_012.png" type="Texture" id=14]
[ext_resource path="res://Image/Animation/menu/Animation Bouton Droit/Bouton Droit_005.png" type="Texture" id=15]
[ext_resource path="res://Image/Animation/menu/Animation Bouton Droit/Bouton Droit_006.png" type="Texture" id=16]
[ext_resource path="res://Image/Animation/menu/Animation Bouton Droit/Bouton Droit_015.png" type="Texture" id=17]
[ext_resource path="res://Image/Animation/menu/Particule Bouton Jouer/Particule Bouton_011.png" type="Texture" id=18]
[ext_resource path="res://Image/Animation/menu/Animation Bouton Droit/Bouton Droit_002.png" type="Texture" id=19]
[ext_resource path="res://Image/Animation/menu/Particule Bouton Jouer/Particule Bouton_009.png" type="Texture" id=20]
[ext_resource path="res://Image/Animation/menu/Particule Bouton Jouer/Particule Bouton_000.png" type="Texture" id=21]
[ext_resource path="res://Image/Animation/menu/Particule Bouton Jouer/Particule Bouton_021.png" type="Texture" id=22]
[ext_resource path="res://Image/Animation/menu/Animation Bouton Droit/Bouton Droit_007.png" type="Texture" id=23]
[ext_resource path="res://Image/Animation/menu/Animation Bouton Gauche/Bouton gauche_015.png" type="Texture" id=24]
[ext_resource path="res://Image/Animation/menu/Animation Bouton Gauche/Bouton gauche_014.png" type="Texture" id=25]
[ext_resource path="res://Image/Animation/menu/Animation Bouton Gauche/Bouton gauche_000.png" type="Texture" id=26]
[ext_resource path="res://Image/Animation/menu/Animation Bouton Gauche/Bouton gauche_008.png" type="Texture" id=27]
[ext_resource path="res://Image/Animation/menu/Animation Bouton Gauche/Bouton gauche_013.png" type="Texture" id=28]
[ext_resource path="res://Image/Animation/menu/Particule Bouton Jouer/Particule Bouton_008.png" type="Texture" id=29]
[ext_resource path="res://Image/Animation/menu/Animation Bouton Gauche/Bouton gauche_010.png" type="Texture" id=30]
[ext_resource path="res://Image/Animation/menu/Animation Bouton Gauche/Bouton gauche_006.png" type="Texture" id=31]
[ext_resource path="res://Image/Animation/menu/Particule Bouton Jouer/Particule Bouton_006.png" type="Texture" id=32]
[ext_resource path="res://Image/Animation/menu/Animation Bouton Gauche/Bouton gauche_017.png" type="Texture" id=33]
[ext_resource path="res://Image/Animation/menu/Animation Bouton Gauche/Bouton gauche_005.png" type="Texture" id=34]
[ext_resource path="res://Image/Animation/menu/Animation Bouton Gauche/Bouton gauche_011.png" type="Texture" id=35]
[ext_resource path="res://Image/Animation/menu/Animation Bouton Gauche/Bouton gauche_002.png" type="Texture" id=36]
[ext_resource path="res://Image/Animation/menu/Animation Bouton Droit/Bouton Droit_010.png" type="Texture" id=37]
[ext_resource path="res://Image/Animation/menu/Animation Bouton Droit/Bouton Droit_001.png" type="Texture" id=38]
[ext_resource path="res://Image/Animation/menu/Animation Bouton Droit/Bouton Droit_003.png" type="Texture" id=39]
[ext_resource path="res://Image/Animation/menu/Animation Bouton Droit/Bouton Droit_016.png" type="Texture" id=40]
[ext_resource path="res://Image/Animation/menu/Animation Bouton Gauche/Bouton gauche_003.png" type="Texture" id=41]
[ext_resource path="res://Image/Animation/menu/Animation Bouton Gauche/Bouton gauche_001.png" type="Texture" id=42]
[ext_resource path="res://Image/Animation/menu/Animation Bouton Gauche/Bouton gauche_009.png" type="Texture" id=43]
[ext_resource path="res://Image/Animation/menu/Animation Bouton Droit/Bouton Droit_004.png" type="Texture" id=44]
[ext_resource path="res://Image/Animation/menu/Particule Bouton Jouer/Particule Bouton_018.png" type="Texture" id=45]
[ext_resource path="res://Image/Animation/menu/Particule Bouton Jouer/Particule Bouton_005.png" type="Texture" id=46]
[ext_resource path="res://Image/Animation/menu/Particule Bouton Jouer/Particule Bouton_049.png" type="Texture" id=47]
[ext_resource path="res://Image/Animation/menu/Animation Bouton Droit/Bouton Droit_012.png" type="Texture" id=48]
[ext_resource path="res://Image/Animation/menu/Particule Bouton Jouer/Particule Bouton_045.png" type="Texture" id=49]
[ext_resource path="res://Image/Animation/menu/Particule Bouton Jouer/Particule Bouton_046.png" type="Texture" id=50]
[ext_resource path="res://Image/Animation/menu/Particule Bouton Jouer/Particule Bouton_036.png" type="Texture" id=51]
[ext_resource path="res://Image/Animation/menu/Particule Bouton Jouer/Particule Bouton_022.png" type="Texture" id=52]
[ext_resource path="res://Image/Animation/menu/Particule Bouton Jouer/Particule Bouton_029.png" type="Texture" id=53]
[ext_resource path="res://Image/Animation/menu/Particule Bouton Jouer/Particule Bouton_057.png" type="Texture" id=54]
[ext_resource path="res://Image/Animation/menu/Particule Bouton Jouer/Particule Bouton_023.png" type="Texture" id=55]
[ext_resource path="res://Image/Animation/menu/Particule Bouton Jouer/Particule Bouton_015.png" type="Texture" id=56]
[ext_resource path="res://Image/Animation/menu/Particule Bouton Jouer/Particule Bouton_026.png" type="Texture" id=57]
[ext_resource path="res://Image/Animation/menu/Particule Bouton Jouer/Particule Bouton_030.png" type="Texture" id=58]
[ext_resource path="res://Image/Animation/menu/Particule Bouton Jouer/Particule Bouton_003.png" type="Texture" id=59]
[ext_resource path="res://Image/Animation/menu/Particule Bouton Jouer/Particule Bouton_007.png" type="Texture" id=60]
[ext_resource path="res://Image/Animation/menu/Animation Bouton Droit/Bouton Droit_014.png" type="Texture" id=61]
[ext_resource path="res://Image/Animation/menu/Particule Bouton Jouer/Particule Bouton_048.png" type="Texture" id=62]
[ext_resource path="res://Image/Animation/menu/Animation Bouton Droit/Bouton Droit_017.png" type="Texture" id=63]
[ext_resource path="res://Image/Animation/menu/Particule Bouton Jouer/Particule Bouton_014.png" type="Texture" id=64]
[ext_resource path="res://Image/Animation/menu/Particule Bouton Jouer/Particule Bouton_058.png" type="Texture" id=65]
[ext_resource path="res://Image/Animation/menu/Particule Bouton Jouer/Particule Bouton_035.png" type="Texture" id=66]
[ext_resource path="res://Image/Animation/menu/Particule Bouton Jouer/Particule Bouton_042.png" type="Texture" id=67]
[ext_resource path="res://Image/Animation/menu/Particule Bouton Jouer/Particule Bouton_056.png" type="Texture" id=68]
[ext_resource path="res://Image/Animation/menu/Particule Bouton Jouer/Particule Bouton_002.png" type="Texture" id=69]
[ext_resource path="res://Image/Animation/menu/Particule Bouton Jouer/Particule Bouton_012.png" type="Texture" id=70]
[ext_resource path="res://Image/Animation/menu/Particule Bouton Jouer/Particule Bouton_039.png" type="Texture" id=71]
[ext_resource path="res://Image/Animation/menu/Particule Bouton Jouer/Particule Bouton_010.png" type="Texture" id=72]
[ext_resource path="res://Image/Animation/menu/Particule Bouton Jouer/Particule Bouton_028.png" type="Texture" id=73]
[ext_resource path="res://Image/Animation/menu/Particule Bouton Jouer/Particule Bouton_050.png" type="Texture" id=74]
[ext_resource path="res://Image/Animation/menu/Animation Bouton Droit/Bouton Droit_011.png" type="Texture" id=75]
[ext_resource path="res://Image/Animation/menu/Particule Bouton Jouer/Particule Bouton_013.png" type="Texture" id=76]
[ext_resource path="res://Image/Animation/menu/Particule Bouton Jouer/Particule Bouton_055.png" type="Texture" id=77]
[ext_resource path="res://Image/Animation/menu/Particule Bouton Jouer/Particule Bouton_047.png" type="Texture" id=78]
[ext_resource path="res://Image/Animation/menu/Particule Bouton Jouer/Particule Bouton_041.png" type="Texture" id=79]
[ext_resource path="res://Image/Animation/menu/Particule Bouton Jouer/Particule Bouton_001.png" type="Texture" id=80]
[ext_resource path="res://Image/Animation/menu/Particule Bouton Jouer/Particule Bouton_031.png" type="Texture" id=81]
[ext_resource path="res://Image/Animation/menu/Particule Bouton Jouer/Particule Bouton_024.png" type="Texture" id=82]
[ext_resource path="res://Image/Animation/menu/Particule Bouton Jouer/Particule Bouton_044.png" type="Texture" id=83]
[ext_resource path="res://Image/Animation/menu/Particule Bouton Jouer/Particule Bouton_043.png" type="Texture" id=84]
[ext_resource path="res://Image/Animation/menu/Particule Bouton Jouer/Particule Bouton_037.png" type="Texture" id=85]
[ext_resource path="res://Image/Animation/menu/Particule Bouton Jouer/Particule Bouton_004.png" type="Texture" id=86]
[ext_resource path="res://Image/Animation/menu/Particule Bouton Jouer/Particule Bouton_053.png" type="Texture" id=87]
[ext_resource path="res://Image/Animation/menu/Particule Bouton Jouer/Particule Bouton_052.png" type="Texture" id=88]
[ext_resource path="res://Image/Animation/menu/Particule Bouton Jouer/Particule Bouton_051.png" type="Texture" id=89]
[ext_resource path="res://Image/Animation/menu/Particule Bouton Jouer/Particule Bouton_040.png" type="Texture" id=90]
[ext_resource path="res://Image/Animation/menu/Particule Bouton Jouer/Particule Bouton_027.png" type="Texture" id=91]
[ext_resource path="res://Image/Animation/menu/Particule Bouton Jouer/Particule Bouton_025.png" type="Texture" id=92]
[ext_resource path="res://Image/Animation/menu/Particule Bouton Jouer/Particule Bouton_038.png" type="Texture" id=93]
[ext_resource path="res://Image/Animation/menu/Particule Bouton Jouer/Particule Bouton_054.png" type="Texture" id=94]
[ext_resource path="res://Image/Animation/menu/Particule Bouton Jouer/Particule Bouton_034.png" type="Texture" id=95]
[ext_resource path="res://Image/Animation/menu/Particule Bouton Jouer/Particule Bouton_059.png" type="Texture" id=96]
[ext_resource path="res://Image/Animation/menu/Particule Bouton Jouer/Particule Bouton_033.png" type="Texture" id=97]
[ext_resource path="res://Image/Animation/menu/Particule Bouton Jouer/Particule Bouton_032.png" type="Texture" id=98]
[ext_resource path="res://Image/Menu/LigthScreenSelect.png" type="Texture" id=99]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 21 ), ExtResource( 80 ), ExtResource( 69 ), ExtResource( 59 ), ExtResource( 86 ), ExtResource( 46 ), ExtResource( 32 ), ExtResource( 60 ), ExtResource( 29 ), ExtResource( 20 ), ExtResource( 72 ), ExtResource( 18 ), ExtResource( 70 ), ExtResource( 76 ), ExtResource( 64 ), ExtResource( 56 ), ExtResource( 9 ), ExtResource( 7 ), ExtResource( 45 ), ExtResource( 5 ), ExtResource( 8 ), ExtResource( 22 ), ExtResource( 52 ), ExtResource( 55 ), ExtResource( 82 ), ExtResource( 92 ), ExtResource( 57 ), ExtResource( 91 ), ExtResource( 73 ), ExtResource( 53 ), ExtResource( 58 ), ExtResource( 81 ), ExtResource( 98 ), ExtResource( 97 ), ExtResource( 95 ), ExtResource( 66 ), ExtResource( 51 ), ExtResource( 85 ), ExtResource( 93 ), ExtResource( 71 ), ExtResource( 90 ), ExtResource( 79 ), ExtResource( 67 ), ExtResource( 84 ), ExtResource( 83 ), ExtResource( 49 ), ExtResource( 50 ), ExtResource( 78 ), ExtResource( 62 ), ExtResource( 47 ), ExtResource( 74 ), ExtResource( 89 ), ExtResource( 88 ), ExtResource( 87 ), ExtResource( 94 ), ExtResource( 77 ), ExtResource( 68 ), ExtResource( 54 ), ExtResource( 65 ), ExtResource( 96 ) ],
"loop": true,
"name": "default",
"speed": 30.0
} ]

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 13 ), ExtResource( 38 ), ExtResource( 19 ), ExtResource( 39 ), ExtResource( 44 ), ExtResource( 15 ), ExtResource( 16 ), ExtResource( 23 ), ExtResource( 10 ), ExtResource( 6 ), ExtResource( 37 ), ExtResource( 75 ), ExtResource( 48 ), ExtResource( 12 ), ExtResource( 61 ), ExtResource( 17 ), ExtResource( 40 ), ExtResource( 63 ) ],
"loop": false,
"name": "default",
"speed": 30.0
} ]

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 26 ), ExtResource( 42 ), ExtResource( 36 ), ExtResource( 41 ), ExtResource( 4 ), ExtResource( 34 ), ExtResource( 31 ), ExtResource( 11 ), ExtResource( 27 ), ExtResource( 43 ), ExtResource( 30 ), ExtResource( 35 ), ExtResource( 14 ), ExtResource( 28 ), ExtResource( 25 ), ExtResource( 24 ), ExtResource( 3 ), ExtResource( 33 ) ],
"loop": false,
"name": "default",
"speed": 30.0
} ]

[sub_resource type="DynamicFont" id=4]
size = 75
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=5]
size = 70
font_data = ExtResource( 2 )

[node name="OngletScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = -962.0
script = ExtResource( 1 )

[node name="PlayButtonAnimated" type="Control" parent="."]
anchor_left = 0.5
anchor_right = 0.5

[node name="ButtonAnimatedParticule" type="AnimatedSprite" parent="PlayButtonAnimated"]
position = Vector2( -1.3999, 56 )
scale = Vector2( 1.5, 1.5 )
frames = SubResource( 1 )
frame = 5

[node name="ButtonAnimatedRight" type="AnimatedSprite" parent="PlayButtonAnimated"]
position = Vector2( 67, 59 )
scale = Vector2( 1.5, 1.5 )
frames = SubResource( 2 )

[node name="ButtonAnimatedLeft" type="AnimatedSprite" parent="PlayButtonAnimated"]
position = Vector2( -78.4001, 50.4999 )
scale = Vector2( 1.5, 1.5 )
frames = SubResource( 3 )

[node name="Playlabel" type="Label" parent="PlayButtonAnimated"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -152.0
margin_top = -2.0
margin_right = 142.0
margin_bottom = 109.0
custom_fonts/font = SubResource( 4 )
text = "JOUER"
align = 1
valign = 1

[node name="PlayButtonOnglet" type="Button" parent="PlayButtonAnimated"]
modulate = Color( 1, 1, 1, 0 )
anchor_left = 0.5
anchor_right = 0.5
margin_left = -126.0
margin_top = 6.0
margin_right = 128.0
margin_bottom = 104.0

[node name="GodsButtonAnimated" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="LightBar" type="Sprite" parent="GodsButtonAnimated"]
visible = false
texture = ExtResource( 99 )
centered = false

[node name="GodsLabel" type="Label" parent="GodsButtonAnimated"]
margin_left = 597.0
margin_top = 22.0
margin_right = 740.0
margin_bottom = 96.0
custom_fonts/font = SubResource( 5 )
text = "DIEU"

[node name="GodsButton" type="Button" parent="GodsButtonAnimated"]
modulate = Color( 1, 1, 1, 0 )
margin_left = 595.0
margin_top = 17.0
margin_right = 744.0
margin_bottom = 94.0

[connection signal="pressed" from="PlayButtonAnimated/PlayButtonOnglet" to="." method="_on_PlayButtonOnglet_pressed"]
[connection signal="pressed" from="GodsButtonAnimated/GodsButton" to="." method="_on_GodsButton_pressed"]
